@@ -42,6 +42,9 @@ Release 1.4.1 (2011-01-28)
 - fixed SF# 3165910: Poco::Net::MessageHeader does not accept HTTP conforming header
 - made Poco::Task::cancel() virtual so that tasks can implement custom
   cancellation behavior.
+- added optional argument to Poco::Util::WinRegistryKey constructor
+  to specify additional flags (in addition to KEY_READ and KEY_WRITE)
+  for the samDesired argument of RegOpenKeyEx() or RegCreateKeyEx().
   
 
 Release 1.4.0 (2010-12-14)
@@ -1449,4 +1452,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.4/dist/CHANGELOG#8 $
+$Id: //poco/1.4/dist/CHANGELOG#9 $
